<resources>
    <string name="app_name">XdagWallet</string>
    <string name="title_activity_xdag_main">XdagMainActivity</string>
    <string name="tab_main_property">Assets</string>
    <string name="tab_main_contracts">Contracts</string>
    <string name="tab_main_settings">Profile</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="multi_language">Language</string>
    <string name="message_center">Notification Center</string>
    <string name="currency_unit">Currency Unit</string>
    <string name="help_center">Help Center</string>
    <string name="about_us">About</string>
    <string name="personal_center">My Account</string>
    <string name="connect_to_pool">Connecting to The Main Network</string>
    <string name="total_assets">Total Assets</string>
    <string name="currency_symbol">$</string>
    <string name="wallet_management">Wallet Management</string>
    <string name="transaction_record">Transaction Record</string>
    <string name="scan">Scan</string>
    <string name="receive_coin">Receive</string>
    <string name="send_coin">Send</string>
    <string name="receiver_address">Receiver\'s Address</string>
    <string name="transfer_amount">Transfer Amount</string>
    <string name="note">Note</string>
    <string name="next">Next</string>
    <string name="mine_xdag_address">Receiving Address</string>
    <string name="copy_address">Copy Wallet Address</string>
    <string name="confirm_pwd">Confirm Password</string>
    <string name="wallet_pwd">Wallet Password</string>
    <string name="enter_pwd">Enter Wallet Password</string>
    <string name="make_sure">OK</string>
    <string name="cancel">Cancel</string>
    <string name="xdag_sending">XDAG sending·····</string>
    <string name="pay_detail">pay_detail</string>

    <string name="operation_information">Opreation Information</string>
    <string name="receive_address">Receive Address</string>
    <string name="send_address">Send Address</string>
    <string name="amount">Amount</string>
    <string name="xdag">XDAG</string>
    <string name="finish">Finish</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_address">enter address</string>
    <string name="name_is_empty" >Please Enter Name</string>
    <string name="address_is_empty" >Please Enter Address</string>
    <string name="create_wallet" >Create Wallet</string>
    <string name="load_wallet" >Load Wallet</string>
    <string name="loading_wallet" >Loading Wallet...</string>
    <string name="save">Save</string>

    <string name="app_default" translatable="false">系统默认</string>
    <string name="app_zh_CN" translatable="false">简体中文</string>
    <string name="app_zh_TW" translatable="false">繁體中文</string>
    <string name="app_en" translatable="false">English</string>
    <string name="app_th" translatable="false">ภาษาไทย</string>
    <string name="app_id" translatable="false">Bahasa Indonesia</string>
    <string name="app_vi" translatable="false">Tiếng Việt</string>
    <string name="app_pt" translatable="false">Português</string>
    <string name="app_es" translatable="false">Español</string>
    <string name="app_ru" translatable="false">Русский</string>
    <string name="app_ar" translatable="false">العربية</string>
    <string name="app_he" translatable="false">‏עברית</string>
    <string name="app_pl" translatable="false">Polski</string>
    <string name="app_hi" translatable="false">हिन्दी</string>
    <string name="app_ja" translatable="false">日本語</string>
    <string name="app_it" translatable="false">Italiano</string>
    <string name="app_ko" translatable="false">한국어</string>



    <string name="use_agreement">Use Agreement</string>
    <string name="version_log">Release Notes</string>
    <string name="check_update">Check Update</string>
    <string name="xdag_pool_setting">Pool Settings</string>
    <string name="current_version">Current Version：%s</string>
    <string name="wallet_name">Wallet Name</string>
    <string name="pwd">Password</string>
    <string name="re_pwd">Confirm Password</string>
    <string name="keyword">Keyword</string>
    <string name="service_srivacy">I have carefully read and agree to <font color="#3E76EA"> the terms of service and privacy</font></string>
    <string name="dag_link_info">dagLink is a mobile light wallet app developed by members of the XDAG World Foundation. It is designed to provide users with secure, easy-to-use digital asset wallets.</string>
    <string name="wallet_notice">The password is used to protect the private key and the transaction authorization dagLink does not store the password and wallet file, nor can it be retrieved by you. Please be sure to remember and back it up.
</string>
    <string name="pwd_not_same">Pasword Not Match</string>
    <string name="change_pwd">Change Password</string>
    <string name="delete_wallet">Delete Wallet</string>
    <string name="backup_wallet">Backup Wallet</string>
    <string name="set_default_wallet">Set Default Wallet</string>
    <string name="backup_file">Backup File</string>
    <string name="choose_file">Choose File</string>
    <string name="backup_file_not_selected">File Not Selected</string>
    <string name="choose_wallet_file">Choose Wallet File</string>
    <string name="copyed">Copied</string>
    <string name="wallet_connecting_to_pool">Connecting...</string>
    <string name="set_password">Set Password</string>
    <string name="input_password">Enter Password</string>
    <string name="retype_password">Confirm Password</string>
    <string name="set_random_keys">Enter Random Keys</string>
    <string name="creating_wallet">Creating Wallet</string>
    <string name="loading_wallet_tips">Need to connect to the main network data, normally takes 2-5 minutes</string>
    <string name="creating_wallet_tips">Connecting to the main Network and creating new wallet. It usually takes about 2-5 minutes so please be patient. It\'s strongly reeommended to backup wallet after created.</string>
    <string name="please_grant_permission">Please Grant Permission</string>
    <string name="load_wallet_error">Fail Loading Wallet</string>
    <string name="load_wallet_error_re_select">Fail Loading Wallet File, Please Make Sure \"wallet.dat\" and \"dnet_key.dat\" are Selected.</string>
    <string name="please_check_wallet_file">Please Check Wallet File</string>
    <string name="xfer_accout_cannot_zero">Transfer Amount Cannot be Zero</string>
    <string name="please_check_xfer_accout">Please Check Transfer Amount</string>
    <string name="xdag_xfer_error">Transfer Failed</string>

    <!-- Notification -->
    <string name="xdag_is_running">XDAG is Running</string>
    <string name="transfer_success">Transfer Success</string>
    <string name="default_wallet_name">Default Wallet</string>
    <string name="pay_attention_can_not_revert">Attention This Operation Cannot be Revoked</string>

    <string name="state">Status</string>
    <string name="sender">Pay by</string>
    <string name="receiver">Pay to</string>
    <string name="fee">Fee</string>
    <string name="hash">Hash</string>
    <string name="transaction_time">Transcation Time</string>
    <string name="success">Success</string>

    <string name="loading_transaction_record">Loading Transaction Record...</string>
    <string name="get_transaction_record">Downloading Transaction Record...</string>
    <string name="loading_more">Loading more...</string>
    <string name="load_no_more">No More</string>

    <string name="choose_backup_file_path_error">Invalid File Path, Please Retry</string>
    <string name="backup_success">Backup Success</string>
    <string name="delete_success">Delete Success</string>
    <string name="wallet_file_exit">Existing Backup File</string>
    <string name="alert_wallet_file_exit">ATTENTION: Existing backup file, continue will override the original file</string>
    <string name="cover_exist_wallet">Override </string>
    <string name="delete_exist_wallet_fail_backup_error">Failed to Override Existing File, Backup Failed</string>
</resources>
