<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        app:layout_scrollFlags="scroll"
        app:popupTheme="@style/AppTheme.PopupOverlay">

        <ImageView
            android:id="@+id/iv_title_left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginRight="16dp"
            android:paddingLeft="@dimen/common_margin"
            android:paddingRight="@dimen/common_margin"
            android:src="@drawable/ic_back" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/create_wallet"
            android:textColor="@color/color_white"
            android:textSize="20sp" />

    </android.support.v7.widget.Toolbar>

    <EditText
        android:id="@+id/et_create_wallet_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/common_margin_big"
        android:layout_marginRight="@dimen/common_margin_big"
        android:hint="@string/wallet_name"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <EditText
        android:id="@+id/et_create_wallet_pwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/common_margin_big"
        android:layout_marginRight="@dimen/common_margin_big"
        android:hint="@string/pwd"
        android:inputType="textPassword"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_create_wallet_name" />

    <EditText
        android:id="@+id/et_create_wallet_repwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/common_margin_big"
        android:layout_marginRight="@dimen/common_margin_big"
        android:hint="@string/re_pwd"
        android:inputType="textPassword"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_create_wallet_pwd" />

    <EditText
        android:id="@+id/et_create_wallet_keyword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/common_margin_big"
        android:layout_marginRight="@dimen/common_margin_big"
        android:hint="@string/keyword"
        android:inputType="textPassword"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_create_wallet_repwd" />

    <CheckBox
        android:id="@+id/ckb_service_srivacy"
        style="@style/CircleCheckBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/common_margin_big"
        android:layout_marginRight="@dimen/common_margin_big"
        android:layout_marginTop="@dimen/common_margin"
        android:text="@string/service_srivacy"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_create_wallet_keyword" />

    <TextView
        android:id="@+id/tv_wallet_notice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/common_margin_big"
        android:layout_marginRight="@dimen/common_margin_big"
        android:layout_marginTop="50dp"
        android:background="@drawable/wallet_bg_notice"
        android:textColor="@color/text_warning_red"
        android:text="@string/dag_link_info"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ckb_service_srivacy" />

    <Button
        android:id="@+id/btn_create_wallet"
        style="@style/common_text_white_normal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="@dimen/common_margin_big"
        android:layout_marginRight="@dimen/common_margin_big"
        android:layout_marginTop="@dimen/common_margin"
        android:background="@drawable/common_btn_bg"
        android:text="@string/create_wallet"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_wallet_notice" />
</android.support.constraint.ConstraintLayout>