<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:layout_editor_absoluteY="81dp">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        app:layout_scrollFlags="scroll"
        app:popupTheme="@style/AppTheme.PopupOverlay">

        <ImageView
            android:id="@+id/iv_title_left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginRight="16dp"
            android:paddingLeft="@dimen/common_margin"
            android:paddingRight="@dimen/common_margin"
            android:src="@drawable/ic_back" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/mine_xdag_address"
            android:textColor="@color/color_white"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tv_title_right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginRight="@dimen/common_margin"
            android:text="@string/finish"
            android:textColor="@color/color_white"
            android:textSize="20sp" />

    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:id="@+id/li_content"
        android:layout_width="match_parent"
        android:layout_height="122dp"
        android:orientation="vertical"

        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <EditText
            android:id="@+id/et_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/common_margin_big"
            android:layout_marginRight="@dimen/common_margin_big"
            android:layout_marginTop="@dimen/common_margin"
            android:hint="@string/enter_name" />

        <EditText
            android:id="@+id/et_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/common_margin_big"
            android:layout_marginRight="@dimen/common_margin_big"
            android:layout_marginTop="@dimen/common_margin"
            android:hint="@string/enter_address" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>