<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_weight="1"
        android:background="?attr/colorPrimary"
        app:layout_scrollFlags="scroll|enterAlways"
        app:popupTheme="@style/AppTheme.PopupOverlay">

        <ImageView
            android:id="@+id/iv_title_left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginRight="16dp"
            android:padding="@dimen/common_margin"
            android:src="@drawable/ic_back" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/tab_main_contracts"
            android:textColor="@color/color_white"
            android:textSize="20sp" />

        <ImageView
            android:id="@+id/iv_title_right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:padding="@dimen/common_margin"
            android:layout_marginRight="16dp"
            android:src="@drawable/ic_scan_simple" />
    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/common_margin_big"
        android:layout_marginRight="@dimen/common_margin_big"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">
        <EditText
            android:id="@+id/et_receiver_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/receiver_address"
            android:drawableRight="@drawable/ic_contracts" />
        <EditText
            android:id="@+id/et_transfer_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/transfer_amount" />
<!--        <EditText
            android:id="@+id/et_transfer_note"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/note" />-->

        <Button
            android:id="@+id/btn_next"
            android:text="@string/next"
            android:layout_width="match_parent"
            android:layout_marginTop="180dp"
            android:background="@drawable/common_btn_bg"
            android:layout_height="wrap_content" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>