<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/AppTheme.PopupOverlay">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="@dimen/common_margin_small"
                android:layout_gravity="center_vertical"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/iv_title_left"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginRight="16dp"
                    android:layout_gravity="center_vertical|left"
                    android:gravity="center_vertical"
                    android:padding="@dimen/common_margin"
                    android:src="@drawable/ic_back" />

                <TextView
                    android:id="@+id/tv_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginRight="60dp"
                    android:text="@string/transaction_record"
                    android:textColor="@color/color_white"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/common_margin_big"
                android:layout_marginTop="@dimen/common_margin_big"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_amount"
                    style="@style/common_text_white_normal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_size_big" />

                <TextView
                    android:id="@+id/tv_xdag"
                    style="@style/common_text_white_normal"
                    android:layout_width="wrap_content"
                    android:layout_marginLeft="@dimen/common_margin"
                    android:layout_height="wrap_content"
                    android:text="@string/xdag" />

            </LinearLayout>
        </LinearLayout>

    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:id="@+id/li_content"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:paddingLeft="@dimen/common_margin_big"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/common_margin"
            android:layout_marginBottom="@dimen/common_margin_small"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_transaction_state_des"
                style="@style/common_text_des_normal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/state" />

            <TextView
                android:id="@+id/tv_transaction_state"
                style="@style/common_text_info_normal"
                android:layout_width="wrap_content"
                android:textColor="#259B24"
                android:layout_marginLeft="@dimen/common_margin_big"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginBottom="@dimen/common_margin"
            android:background="@color/divider_bg" />

        <TextView
            android:id="@+id/tv_transaction_sender_des"
            style="@style/common_text_des_normal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sender" />

        <TextView
            android:id="@+id/tv_transaction_sender"
            style="@style/common_text_info_normal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/tv_transaction_receiver_des"
            style="@style/common_text_des_normal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/receiver" />

        <TextView
            android:id="@+id/tv_transaction_receiver"
            style="@style/common_text_info_normal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/tv_transaction_fee_des"
            style="@style/common_text_des_normal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fee" />

        <TextView
            android:id="@+id/tv_transaction_fee"
            style="@style/common_text_info_normal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginBottom="@dimen/common_margin"
            android:layout_marginTop="@dimen/common_margin"
            android:background="@color/divider_bg" />

        <TextView
            android:id="@+id/tv_transaction_hash_des"
            style="@style/common_text_des_normal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hash" />

        <TextView
            android:id="@+id/tv_transaction_hash"
            style="@style/common_text_info_normal"
            android:layout_marginRight="@dimen/common_margin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/tv_transaction_time_des"
            style="@style/common_text_des_normal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/transaction_time" />

        <TextView
            android:id="@+id/tv_transaction_time"
            style="@style/common_text_info_normal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>