<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.xdag.wallet.ui.activity.XdagMainActivity">



    <android.support.design.widget.TabLayout
        android:id="@+id/tabs"
        android:layout_width="match_parent"
        android:layout_height="@dimen/tab_height"
        android:layout_gravity="bottom"
        app:tabGravity="fill"
        app:tabBackground="@color/color_tab_bg"
        app:tabIndicatorHeight="0dp"
        app:tabSelectedTextColor="@color/colorPrimary"
        app:tabTextColor="@color/color_grey"
        app:layout_anchorGravity="bottom"
        >

        <android.support.design.widget.TabItem
            android:id="@+id/tabItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:icon="@drawable/icon_tab_property"
            android:text="@string/tab_main_property" />

        <android.support.design.widget.TabItem
            android:id="@+id/tabItem2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:icon="@drawable/icon_tab_contacts"
            android:text="@string/tab_main_contracts" />

        <android.support.design.widget.TabItem
            android:id="@+id/tabItem3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/tab_bg_drawable"
            android:icon="@drawable/icon_tab_settings"
            android:text="@string/tab_main_settings" />

    </android.support.design.widget.TabLayout>

    <android.support.v4.view.ViewPager
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/tab_height"
        app:layout_anchor="@+id/tabs"
        app:layout_anchorGravity="top" />
    <include android:id="@+id/loading_layout"
        layout="@layout/dialog_loading"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        />
</android.support.design.widget.CoordinatorLayout>
